Resolved textblues (citations) + edits

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -235,4 +235,19 @@ note = {(Accessed on 02/12/2019)}
  organization={Springer}
 }
 
+@book{rogoff2017curse,
+  title={The Curse of Cash: How Large-Denomination Bills Aid Crime and Tax Evasion and Constrain Monetary Policy},
+  author={Rogoff, Kenneth S},
+  year={2017},
+  publisher={Princeton University Press}
+}
+
+@misc{geminido29:online,
+author = {},
+title = {gemini-dollar-trailofbits-audit.pdf},
+howpublished = {\url{https://gemini.com/wp-content/themes/gemini/assets/img/dollar/gemini-dollar-trailofbits-audit.pdf}},
+month = {},
+year = {},
+note = {(Accessed on 02/23/2019)}
+}
 
